--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,27 @@
 
 .root {
   font-family: "Inter", sans-serif;
+  scroll-behavior: smooth 1s;
+}
+
+.text-hover {
+  position: relative;
+  text-decoration: none;
+}
+
+.text-hover::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #d69e2e;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.text-hover:hover::before {
+  transform: scaleX(1);
 }
